--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/CaseSolution/_Input.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/CaseSolution/_Input.cshtml
@@ -2248,6 +2248,31 @@
 
             $('#target').submit();
         })
+
+
+        $('#CopyCaseSolution').on('click', function () {
+
+
+            var id=0;            
+            if (id==0)
+            {                
+                var form = $("#target").serialize();
+                $.ajax({
+                    type: 'POST',
+                    url: "/CaseSolution/Copy",
+                    data: form,
+                    success: function (data) {
+                   
+                        window.location.href = '/CaseSolution/Index/';
+                        //$('#divReplaceConditions').html($(data));
+                    },
+                    error: function (result) {
+                   
+                    }
+                });
+            }
+            //form.submit();
+        })
     });
 
 
