[ADD] #58180 Attach existing files in case log

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Content/css/dhhelpdesk.css
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Content/css/dhhelpdesk.css
@@ -4053,3 +4053,13 @@ a.export-order {
 .tableth9 {
     width: 20%;
 }
+
+td > div.checkbox.commun {
+    line-height: 20px;
+    padding-left: 40px;
+}
+
+.attachedFile {
+    background-image: url(../icons/clip.png);
+    background-position: 2px 1px;
+}
