--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/CaseSolution/_Input.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/CaseSolution/_Input.cshtml
@@ -156,8 +156,8 @@
                                         </td>
                                     </tr>
                                 </table>
-                                <div id="divShowCase" style="display:none; padding:5px;width:100%">
-                                    <table class="tableform" border="0">
+                                <div id="divShowCase" style="display:none; padding:0px;width:100%">
+                                    <table class="tableform" border="0" style="width:1200px">
                                         <tr>
                                             <td style="width:200px">
                                                 @Translation.Get("Koppla till åtgärd", Enums.TranslationSource.TextTranslation)
@@ -176,7 +176,7 @@
                                             @*Split selection*@
                                             @*// TODO: Use a enable button to show (and reset value if saved when disabled) of split to dropdown*@
                           
-                                            <td style="width:250px;padding-left:20px;">
+                                            <td style="width:150px;padding-left:20px;">
                                                 @Translation.Get("Split to case template", Enums.TranslationSource.TextTranslation)
                                             </td>
                                             <td>
