--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_CaseLog.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_CaseLog.cshtml
@@ -174,17 +174,17 @@
                                         {
                                             if (l.CaseId.HasValue)
                                             {
-                                                <a target="_blank" class="isExisted" href="@Html.Action("CaseFileLinkVD", "FileHandler", new RouteValueDictionary {{"id", l.CaseId.Value}, {"fileName", l.FileName}})"><i class="icon- attachedFile"></i>@l.FileName</a>
+                                                <a target="_blank" class="isExisted" href="@Html.Action("CaseFileLinkVD", "Files", new RouteValueDictionary {{"id", l.CaseId.Value}, {"fileName", l.FileName}})"><i class="icon- attachedFile"></i>@l.FileName</a>
                                             }
                                             else
                                             {
                                                 if (l.LogId.HasValue)
                                                 {
-                                                    <a target="_blank" class="isExisted" href="@Html.Action("LogFileLinkVD", "FileHandler", new RouteValueDictionary {{"id", l.LogId.Value}, {"fileName", l.FileName}})"><i class="icon- attachedFile"></i> @l.FileName</a>
+                                                    <a target="_blank" class="isExisted" href="@Html.Action("LogFileLinkVD", "Files", new RouteValueDictionary {{"id", l.LogId.Value}, {"fileName", l.FileName}})"><i class="icon- attachedFile"></i> @l.FileName</a>
                                                 }
                                                 else
                                                 {
-                                                    <a target="_blank" href="@Html.Action("LogFileLinkVD", "FileHandler", new {id = r.Id, fileName = l.FileName})"><i class="icon-file"></i> @l.FileName</a>
+                                                    <a target="_blank" href="@Html.Action("LogFileLinkVD", "Files", new {id = r.Id, fileName = l.FileName})"><i class="icon-file"></i> @l.FileName</a>
                                                 }
                                             }
 
@@ -196,13 +196,13 @@
                                         {
                                             if (l.CaseId.HasValue)
                                             {
-                                                <a target="_blank" class="isExisted" href="@Html.Action("CaseFileLinkVD", "FileHandler", new RouteValueDictionary {{"id", l.CaseId.Value}, {"fileName", l.FileName}})"><i class="icon- attachedFile"></i>@l.FileName</a>
+                                                <a target="_blank" class="isExisted" href="@Html.Action("CaseFileLinkVD", "Files", new RouteValueDictionary {{"id", l.CaseId.Value}, {"fileName", l.FileName}})"><i class="icon- attachedFile"></i>@l.FileName</a>
                                             }
                                             else
                                             {
                                                 if (l.LogId.HasValue)
                                                 {
-                                                    <a target="_blank" class="isExisted" href="@Html.Action("LogFileLinkVD", "FileHandler", new RouteValueDictionary {{"id", l.LogId.Value}, {"fileName", l.FileName}})"><i class="icon- attachedFile"></i> @l.FileName</a>
+                                                    <a target="_blank" class="isExisted" href="@Html.Action("LogFileLinkVD", "Files", new RouteValueDictionary {{"id", l.LogId.Value}, {"fileName", l.FileName}})"><i class="icon- attachedFile"></i> @l.FileName</a>
                                                 }
                                                 else
                                                 {
