--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/CaseSolution/_InputCategory.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/CaseSolution/_InputCategory.cshtml
@@ -28,7 +28,7 @@
                                 <tr>
                                     <td class="span3">
                                         @Translation.Get("Ärendemall", Enums.TranslationSource.TextTranslation) 
-                                        @Translation.Get("Kategori", Enums.TranslationSource.TextTranslation): 
+                                        @Translation.Get("Kategori", Enums.TranslationSource.TextTranslation) 
                                         <span class="mandatorystar">*</span> 
                                     </td>
                                     <td class="span9">
